syntax = "proto3";

option csharp_namespace = "gRPCRESTAPI";

import "google/api/annotations.proto";

package item;

service ItemService {

    // Create
    rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {
        option (google.api.http) = {
            post: "/v1/item",
            body: "*"
        };
    }

    // Read single
    rpc ReadItem (ReadItemRequest) returns (ReadItemResponse) {
        option (google.api.http) = {
            get: "/v1/item/{id}"
        };
    }

    // Read list

    rpc ReadItems (ReadItemsRequest) returns (ReadItemsResponse) {
        option (google.api.http) = {
            get: "/v1/item"
        };
    }

    // Update
    rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {
        option (google.api.http) = {
            put: "/v1/item",
            body: "*"
        };
    }

    // Delete
    rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse) {
        option (google.api.http) = {
            delete: "/v1/item/{id}"
        };
    }
}

message CreateItemRequest {
    string title = 1;
    string description = 2;
}

message CreateItemResponse {
    int32 id = 1;
}

message ReadItemRequest {
    int32 id = 1;
}

message ReadItemResponse {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
}

message ReadItemsRequest {

}

message ReadItemsResponse {
    repeated ReadItemResponse items = 1;
}

message UpdateItemRequest {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
}

message UpdateItemResponse {
    int32 id = 1;
}

message DeleteItemRequest {
    int32 id = 1;
}

message DeleteItemResponse {
    int32 id = 1;
}